# roki-android

./: .gitignore  build.gradle  common.gradle  et HEAD@{2} --hard  gradle.properties  id_rsa.pub  id_rsa.pub.pub  settings.gradle  versions.gradle
MPChartLib/: build.gradle
androidx/skin-support-appcompat/: build.gradle
androidx/skin-support-design/: build.gradle
com.legent/: build.gradle
com.legent.plat/: build.gradle
com.legent.ui/: build.gradle
com.legent.utils.easylink/: build.gradle
com.legent.utils.qrcode/: .gitignore  build.gradle  proguard-rules.pro
com.legent.utils.speech/: build.gradle
com.robam.banner/: build.gradle
com.robam.common/: build.gradle
com.robam.mqtt/: build.gradle  proguard-rules.pro
com.robam.openyouku/: AndroidManifest.xml  build.gradle
com.robam.player/: build.gradle
com.robam.push/: AndroidManifest.xml  build.gradle
com.robam.roki/: .gitignore  build.gradle  google-services.json  keystore.jks  proguard-rules.pro  rokimob.keystore
com.robam.tabstrip/: build.gradle
core/: build.gradle
smartconfig/: .gitignore  CMakeLists.txt  build.gradle
smartconfig/src/androidTest/java/com/example/smartconfig/: ExampleInstrumentedTest.java
smartconfig/src/main/: AndroidManifest.xml
smartconfig/src/main/cpp/: BroadcastManager.cpp  BroadcastManager.h  BroadcastMessage.cpp  BroadcastMessage.h  Common.h  ConfigManager.cpp  ConfigManager.h  Message.cpp  Message.h  SmartConfig.cpp  Thread.cpp  Thread.h
smartconfig/src/test/java/com/example/smartconfig/: ExampleUnitTest.java
softap/: build.gradle
uiasr/: build.gradle
(+4239 files in other folders)
